--- a/styles.css
+++ b/styles.css
@@ -9,3 +9,10 @@
   box-shadow: 10px 5px 5px red;
   font-size: 18px;
 }
+a {
+  font-size: 30px;
+  background-color: purple;
+}
+a:hover {
+  background-color: yellow;
+}
