--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Amatic+SC');
+
 * {
   display: flex;
   flex-flow: column nowrap;
@@ -5,7 +7,13 @@
   font-size: 16px;
   color: blue;
 }
+
 *:hover {
   box-shadow: 10px 5px 5px red;
   font-size: 18px;
+}
+
+h1 {
+    font-size: 20rem;
+    font-family: 'Amatic SC'
 }
