--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,11 @@
 }
 
 *:hover {
-  box-shadow: 10px 5px 5px red;
-  font-size: 18px;
+  box-shadow: 10px 10px 10px 10px red;
 }
 
 h1 {
-    font-size: 20rem;
+    font-size: 5rem;
     font-family: 'Amatic SC'
 }
 
